# starting-claude-code

./: .gitignore  1_SETUP_GUIDE.md  2_FIRST_SESSION.md  3_WORKFLOW_HABITS.md  3_WORKING_PRINCIPLES.md  4_GETTING_GOOD_OUTPUT.md  4_SLASH_COMMANDS.md  5_SHORTCUTS.md  5_SLASH_COMMANDS.md  5_SPEED_UP_WORKFLOW.md  6_SKILLS.md  7_FUN_STATUS_LINE.md  7_FUN_STUFF.md  CLAUDE.md  README.md  SESSION_LOG.md  test.md
commands/: commit.md  pull-main.md  review-session.md
skills/commit/: SKILL.md
skills/create-pr/: SKILL.md
skills/maintain-docs/: SKILL.md
skills/md/: SKILL.md
skills/prd/: SKILL.md
skills/pull-main/: SKILL.md
skills/review-session/: SKILL.md
skills/transcript-analysis/: README.md  SKILL.md
skills/transcript-analysis/references/: pipeline-details.md
skills/transcript-analysis/scripts/: build_themes.py  verify_quotes.py
templates/: SESSION_LOG_TEMPLATE.md  STARTER_GLOBAL_CLAUDE.md  STARTER_PROJECT_CLAUDE.md
tools/Anonymize Research/: README.md  anonymize.py
tools/Anonymize Research - Western/: README.md
tools/Markdown to Notion/: README.md  package.json  upload.mjs
tools/YNAB Sync/: .gitignore  README.md  SETUP_API_TOKEN.md  config.example.yaml  pyproject.toml
tools/YNAB Sync/ynab_sync/: __init__.py  cli.py  config.py  models.py  ynab_api.py
tools/YNAB Sync/ynab_sync/parsers/: __init__.py  base.py  citibank.py  dbs.py  uob.py  wise.py
tools/anonymize-research/: README.md  anonymize.py
