[project]
name = "ynab-sync"
version = "0.1.0"
description = "Convert bank CSV exports to YNAB format and sync via API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "python-dateutil>=2.8",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[project.scripts]
ynab-sync = "ynab_sync.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
